# piscine-epitech

./: .gitignore  AfternoonTea.java  Bread.java  Breakfast.java  CustomerOrder.java  Example.java  LICENSE  Lunch.java  NoSuchFoodException.java  PAR-15_gantt.xlsx  PAR-15_resources.xlsx  README.md  job_dsl.groovy  my_marvin.yml
seminar-ai/Day_121_135/solutions_day121_135/: .gitignore  README.md  app.py  assistant.py  bookworm.py  helper.py  install.bat  install.sh  pyproject.toml
seminar-ai/Day_121_135/solutions_day121_135/bootstrap/: __init__.py  calculator.py  tools.py
seminar-ai/Day_121_135/solutions_day121_135/core/: agent_schema.py  book.py  cache.py  data.py  nlp.py  tools.py  utils.py
seminar-ai/Day_121_135/solutions_day121_135/data/input/: collection.csv  pg_catalog.csv
seminar-ai/Day_121_135/solutions_day121_135/data/input/references/: SOURCES.md
seminar-ai/Day_121_135/solutions_day121_135/docs/: choices_explained.md
seminar-ai/Day_121_135/solutions_day121_135/docs/assets/: app.css
seminar-ai/Day_121_135/solutions_day121_135/pipeline/: arc.py  attribute.py  bert.py  card.py  charts.py  compare.py  entities.py  lexdiv.py  registry.py  report.py  report_template.html  rouge.py  similar.py  summarize.py  syntax.py  topics.py  utils.py
seminar-ai/Day_121_135/solutions_day121_135/tests/: conftest.py  test_app.py  test_attribute.py  test_bert.py  test_contracts.py  test_data.py  test_properties.py  test_relations.py  test_report.py  test_snapshots.py  test_syntax.py
seminar-ai/Day_121_135/solutions_day121_135/tests/golden/11/: arc.json  compare.json  (+7 more)
(+839 files in other folders)
