[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookworm"
version = "1.0.0"
description = "Lightweight NLP CLI for Project Gutenberg books"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "nltk==3.9.4",
    "numpy==2.4.6",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "spacy==3.8.14",
    "joblib==1.5.3",
    "pyinstrument==5.1.2",
    "matplotlib==3.10.9",
    "plotly==6.8.0",
    "kaleido==1.3.0",
    "rouge-score==0.1.2",
]

[project.optional-dependencies]
bert = [
    "transformers==4.57.3",
]
web = [
    "streamlit==1.58.0",
]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
bookworm = "bookworm:main"
bookworm-bootstrap = "core.utils:download_nltk_data"

[tool.setuptools]
py-modules = ["bookworm", "assistant", "app"]
packages = ["core", "pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise file output or slower end-to-end paths",
]
